Fixed sign link visibility on mobile screens

--- a/packages/_shared/assets/css/v2/components/navbar.css
+++ b/packages/_shared/assets/css/v2/components/navbar.css
@@ -127,8 +127,7 @@
         width: 100%;
     }
 
-    .gh-head-actions .gh-search,
-    .gh-head-actions .gh-head-link {
+    .gh-head-actions .gh-search {
         display: none;
     }
 }
